--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-dash==2.18.2
-dash-bootstrap-components==1.6.1rc2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-Flask==3.0.3
-folium==0.18.0
-geopy==2.4.1
-pandas==2.2.3
-tabulate==0.9.0
-openpyxl
-streamlit
+dash==2.0.0
+pandas==1.3.3
+folium==0.12.1
+geopy==2.2.0
+dash-bootstrap-components==0.13.1
+plotly==5.3.1
+tabulate==0.8.9
+osmnx==1.1.1
