--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# requirements.txt
 dash==2.0.0
 pandas==1.3.3
 folium==0.12.1
@@ -6,3 +7,5 @@ dash-bootstrap-components==0.13.1
 plotly==5.3.1
 tabulate==0.8.9
 osmnx==1.1.1
+setuptools==68.0.0
+six==1.16.0
