--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-# requirements.txt
-dash==2.0.0
-pandas==1.3.3
-folium==0.12.1
-geopy==2.2.0
-dash-bootstrap-components==0.13.1
-plotly==5.3.1
-tabulate==0.8.9
-osmnx==1.1.1
-setuptools==68.0.0
+dash==2.18.2
+dash-bootstrap-components==1.6.1rc2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==3.0.3
+folium==0.18.0
+geopy==2.4.1
+pandas==2.2.3
+tabulate==0.9.0
+openpyxl==3.2.0b1
+setuptools==75.6.0
 six==1.16.0
+pip==24.3.1
